[package]
name = "server_disk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local_ipaddress ={ version = "0.1.3"}
hostname = { version = "0.3.1"}

[dev-dependencies]
mockall = { version = "0.12.1"}